Add SearchResponse object and fix issues